trunk/Archive2/15/4e6b00671b2741/output
main.cpp: In substitution of 'template<class T> using return_type_t = typename return_type::type [with T = int (bad::*)(int, ...) const volatile &&]':
main.cpp:55:48:   required from here
main.cpp:47:52: error: invalid use of incomplete type 'struct return_type<int (bad::*)(int, ...) const volatile &&>'
 using return_type_t = typename return_type<T>::type;
                                                    ^
main.cpp:2:8: error: declaration of 'struct return_type<int (bad::*)(int, ...) const volatile &&>'
 struct return_type;
        ^
